--- a/src/locales/menu_tr.json
+++ b/src/locales/menu_tr.json
@@ -444,10 +444,10 @@
         "name": "Kahvaltı Tabağı ( 2 adet bardakta çay ilave)"
     },
     "toast_with_cheddar": {
-        "name": "Tost Kaşarlı"
+        "name": "Tost Kaşarlı (çift kaşar)"
     },
     "toast_with_cheddar+salami": {
-        "name": "Tost Karışık"
+        "name": "Tost Karışık (kaşar+jambon/salam)"
     },
     "sandwich_(cheese_+cheddar+salami)": {
         "name": "Sandeviç (Kaşar Peyniri+Chedar+Salam)"
