--- a/src/locales/menu_tr.json
+++ b/src/locales/menu_tr.json
@@ -381,7 +381,7 @@
         "name": "Kurabiye Dünyası"
     },
     "tiramisu": {
-        "name": "Tiramisu"
+        "name": "Tiramisu Pasta"
     },
     "types_of_pies_(slice)": {
         "name": "Turta Dünyası (Dilim)"
