--- a/src/locales/menu.json
+++ b/src/locales/menu.json
@@ -11,6 +11,7 @@
             "flat_white",
             "latte",
             "latte_macchiato",
+            "latte_caramel_macchiato",
             "mocha",
             "white_mocha",
             "cafe_bombom",
