--- a/src/locales/menu.json
+++ b/src/locales/menu.json
@@ -68,7 +68,8 @@
         "other_cold_drinks": [
             "milkshake_(_vanilla_/_chocolate_/_strawberry_/_banana_)",
             "milkshake_(oreo)",
-            "smoothie",
+            "smoothie_(banane/_strawberry)",
+            "smoothie_(edema_reliever-_green_fruit_and_vegetable)",
             "frappe",
             "frozen",
             "italyan_sodas",
