--- a/src/locales/menu_tr.json
+++ b/src/locales/menu_tr.json
@@ -218,8 +218,11 @@
     "milkshake_(oreo)": {
         "name": "Milkshake (Oreo)"
     },
-    "smoothie": {
-        "name": "Smoothie"
+    "smoothie_(banane/_strawberry)": {
+        "name": "Smoothie (Muz / Çilek)"
+    },
+    "smoothie_(edema_reliever-_green_fruit_and_vegetable)": {
+        "name": "Smoothie ( Ödem Atıcı - Yeşil Meyve ve Sebze)"
     },
     "frappe": {
         "name": "Frappe"
