--- a/src/locales/menu.json
+++ b/src/locales/menu.json
@@ -71,7 +71,7 @@
             "smoothie_(banane/_strawberry)",
             "smoothie_(edema_reliever-_green_fruit_and_vegetable)",
             "frappe",
-            "frozen",
+            "frozen_(_banane_/_strawberry_/_blueberry)_",
             "italyan_sodas",
             "iced_matcha_latte",
             "iced_blue_lagoon",
