--- a/src/locales/menu_tr.json
+++ b/src/locales/menu_tr.json
@@ -227,8 +227,8 @@
     "frappe": {
         "name": "Frappe"
     },
-    "frozen": {
-        "name": "Frozen"
+    "frozen_(_banane_/_strawberry_/_blueberry)_": {
+        "name": "Frozen ( Muz  /Çilek / Yaban Mersini)"
     },
     "italyan_sodas": {
         "name": "İtalyan Sodası"
