--- a/src/locales/menu_en.json
+++ b/src/locales/menu_en.json
@@ -227,8 +227,8 @@
     "frappe": {
         "name": "Frappe"
     },
-    "frozen": {
-        "name": "Frozen"
+    "frozen_(_banane_/_strawberry_/_blueberry)_": {
+        "name": "Frozen ( Banane / Strawberry / Blueberry) "
     },
     "italyan_sodas": {
         "name": "Italyan Sodas"
